--- a/devops.html
+++ b/devops.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/loanpal/job/oqFEafwD'>Loanpal Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loanpal/job/oqFEafwD'>Loanpal Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -167,7 +167,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -204,7 +204,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p>Jul 16, 2019 ... DevOps Cloud Architect. Maidenhead. Engineering ? Engineering. Full-Time. 
 Apply for this job. About Us. Alfresco Software, Inc. (?Alfresco?) is an enterprise?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/705260'>Job Application for DevOps Engineer at Arundo Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/705260'>Job Application for DevOps Engineer at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Our website is www.arundo.com. Job Description. An experienced DevOps 
 Engineer to work with our product development team and clients. You will be 
@@ -220,7 +220,7 @@ leading?...</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/drivy/74fe9a66-dfbd-464e-abb3-80f3caf44f9a'>Drivy - Tooling / DevOps Intern</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -240,7 +240,7 @@ leading?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oxfzafwf'>Infostretch Corporation Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oxfzafwf'>Infostretch Corporation Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Overall 8+ years of Experience in Development and 2+ years in DevOps; This 
 needs to be a hands-on developer resource not an Admin resource (release?...</p>
@@ -333,7 +333,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/264866-devops-programmierer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmierer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/264866-devops-programmierer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmierer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -359,7 +359,7 @@ us your CV. Any questions before taking the next step? You can contact Dorian.</
 <p>3 days ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bookinggo/jobs/1760241'>Job Application for DevOps Engineer - Cloud &amp; Tooling at BookingGo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bookinggo/jobs/1760241'>Job Application for DevOps Engineer - Cloud &amp; Tooling at BookingGo</a></h5> 
 <p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -387,7 +387,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://column-information-security.workable.com/j/3DEB8FFC22'>Column Group - Jobs: DevOps Consultant - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://column-information-security.workable.com/j/3DEB8FFC22'>Column Group - Jobs: DevOps Consultant - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -415,11 +415,11 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of DevOps Engineer at OneinaMil.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/8CAC4FE1D1'>Youtap Limited - Jobs: Senior DevOps Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/8CAC4FE1D1'>Youtap Limited - Jobs: Senior DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior DevOps Engineer at Youtap Limited.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B49BC8B53C'>Everledger - Jobs: DevOps Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/B49BC8B53C'>Everledger - Jobs: DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Engineer at Everledger.</p>
 <hr/>
@@ -447,7 +447,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://activeprospect.applytojob.com/apply/TcIaoFramR/Senior-DevOps-Engineer-Remote-OK'>Senior DevOps Engineer (Remote OK) - ActiveProspect, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/TcIaoFramR/Senior-DevOps-Engineer-Remote-OK'>Senior DevOps Engineer (Remote OK) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
