--- a/software.html
+++ b/software.html
@@ -79,11 +79,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/9oM1jAy69U/Software-Engineer-Robot-Reliability-And-Testing'>Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/9oM1jAy69U/Software-Engineer-Robot-Reliability-And-Testing'>Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/eLzICyGeLn/Contract-Technical-Recruiter-Software-Engineering'>Contract Technical Recruiter, Software Engineering - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/eLzICyGeLn/Contract-Technical-Recruiter-Software-Engineering'>Contract Technical Recruiter, Software Engineering - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692409880-senior-software-engineer-dfm-visa-digital-developer-platform-vddp-'>Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692409880-senior-software-engineer-dfm-visa-digital-developer-platform-vddp-'>Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://powerdms1.applytojob.com/apply/0QQ7bdulz0/Senior-Software-Engineer-Back-Andor-FrontEnd-Local-Or-Remote'>Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://powerdms1.applytojob.com/apply/0QQ7bdulz0/Senior-Software-Engineer-Back-Andor-FrontEnd-Local-Or-Remote'>Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -275,7 +275,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692203401-embedded-software-engineer'>4Catalyzer Embedded Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692203401-embedded-software-engineer'>4Catalyzer Embedded Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -295,7 +295,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://charger-logistics-inc.workable.com/j/9134B07729'>Charger Logistics Inc - Jobs: Software Engineer - Apply online</a></h5> 
+<h5><a href='https://charger-logistics-inc.workable.com/j/9134B07729'>Charger Logistics Inc - Jobs: Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Santiago Mexico</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -307,7 +307,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4369201002'>Job Application for Senior Software Engineer (Java) at OpenTable</a></h5> 
+<h5><a href='https://boards.greenhouse.io/opentable/jobs/4369201002'>Job Application for Senior Software Engineer (Java) at OpenTable</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -365,7 +365,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -417,7 +417,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Senior Software Engineer at Crossbeam.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
 riskmethods.</p>
